# codex-acp-2

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  plan.md
docs/: toad-compatibility-check.md  zed-computer-use-check.md
npm/: README.md  package.json
npm/publish/: update-base-package.sh
npm/template/: package.json
npm/testing/: test-platform-detection.js  validate.sh
src/: acp_mcp_bridge.rs  codex_agent.rs  display.rs  file_changes.rs  guardian.rs  lib.rs  permission.rs  session_mode.rs  test_fixtures.rs  thread.rs  user_input.rs
src/boundary/: approval.rs  compat.rs  constants.rs  contracts.rs  effect.rs  file_changes.rs  mcp_approval.rs  mod.rs  model.rs  op.rs  permission.rs  raw.rs  session_update.rs  tool_call.rs
src/boundary/mapper/: actor.rs  classify.rs  live.rs  mod.rs  replay.rs  tests.rs  types.rs
src/boundary/tool_call/: collab.rs  command.rs  dynamic.rs  exec.rs  guardian.rs  mcp.rs  patch.rs  replay.rs  web_image.rs
src/thread/: actor.rs  actor_config.rs  actor_models.rs  actor_modes.rs  actor_prompt.rs  actor_state.rs  actor_status.rs  approvals.rs  client.rs  collab_render.rs  deps.rs  file_changes.rs  mcp_approvals.rs  model_picker.rs  prompt_items.rs  replay.rs  replay_items.rs  slash_commands.rs  submission.rs  submission_collab.rs  submission_dispatch.rs  submission_dynamic.rs  submission_exec.rs  submission_guardian.rs  submission_lifecycle.rs  submission_mcp.rs  submission_patch.rs  submission_permissions.rs  submission_web_image.rs  tool_calls.rs  web_search.rs
src/thread/submission/: interactions.rs  responses.rs
src/thread/tests/: config_tests.rs  exec_tests.rs  mod.rs  permission_tests.rs  prompt_tests.rs  replay_tests.rs
src/thread/tests/fixtures/: mod.rs  setup.rs  stub_client.rs  stub_thread.rs  test_deps.rs
